syntax="proto3";

import "src/proto/command/domain/BaseMethod.proto";

//
message EnhanceAffect {  
repeated BaseMethod methods=1;
 int32 cCnt=2;
 int32 mCnt=3;
 int32 jobId=4;
 int32 state=5;
 string message=6;
}
