syntax="proto3";
//
message EnhanceCommandComplete {  
 int32 code=1;
 int32 jobId=2;
 int32 state=3;
 string message=4;
}
