syntax="proto3";

import "src/proto/command/domain/LoggerInfo.proto";
//
message LoggerInfoResponse {  
repeated LoggerInfo loggers=1;
 int32 jobId=2;
 int32 state=3;
 string message=4;
}
