syntax="proto3";
//
message UpdateLoggerLevelResponse {  
 bool success=1;
 int32 jobId=2;
 int32 state=3;
 string message=4;
}
