syntax="proto3";

import "src/proto/command/domain/VmOption.proto";
//
message VmOptionResponse {  
repeated VmOption options=1;
 int32 jobId=2;
 int32 state=3;
 string message=4;
}
